Working basic console demo

--- a/src/controller/package.json
+++ b/src/controller/package.json
@@ -5,7 +5,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "libxml": "^0.0.7",
-    "libxml-xsd": "^0.5.2"
+    "xmllint": "^0.1.1"
   }
 }
