--- a/src/controller/package.json
+++ b/src/controller/package.json
@@ -5,6 +5,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "xmllint": "^0.1.1"
+    "xmllint": "0.1.1"
   }
 }
