--- a/src/controller/package.json
+++ b/src/controller/package.json
@@ -5,6 +5,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "supervisor": "^0.12.0",
     "xmllint": "0.1.1"
   }
 }
